--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <canvas id="playerCanvas"></canvas>
 </div>
 
-<script src="script.js"></script>
-<script src="rotateArray.js"></script>
+<script src="js/Sprite.js"></script>
+<!--<script src="js/bigGirl.js"></script>-->
+<script src="js/rpg.js"></script>
+<script src="js/script.js"></script>
+
 </body>
 </html>
