obstacles at left and at right can not be passed

--- a/app/index.html
+++ b/app/index.html
@@ -13,12 +13,12 @@
     <canvas id="background_layer" width="800" height="600" class="layer"></canvas>
 </div>
 
-<script src="app.min.js"></script>
+<!--<script src="app.min.js"></script>-->
 
-<!--<script src="js/Background.js"></script>-->
-<!--<script src="js/Sprite.js"></script>-->
-<!--<script src="js/Player.js"></script>-->
-<!--<script src="js/script.js"></script>-->
+<script src="js/Background.js"></script>
+<script src="js/Sprite.js"></script>
+<script src="js/Player.js"></script>
+<script src="js/script.js"></script>
 
 </body>
 </html>
